Add views/add library for accelerometer

--- a/src/pymakr.conf
+++ b/src/pymakr.conf
@@ -1,6 +1,6 @@
 {
     "name": "BSidesFW2025Badge",
     "py_ignore": [
-      "schematics/board-version-1.pdf"
+      "name.json.example"
     ]
 }
