--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "adafruit-ampy>=1.1.0",
     "esptool>=4.8.1",
+    "micropython-esp32-stubs>=1.24.1.post1",
+    "mpremote>=1.24.1",
     "mpy-cross>=1.24.1.post2",
     "pillow>=11.1.0",
     "rshell>=0.0.36",
