--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "adafruit-ampy>=1.1.0",
     "esptool>=4.8.1",
     "micropython-esp32-stubs>=1.24.1.post1",
+    "mido>=1.3.3",
     "mpremote>=1.24.1",
     "mpy-cross>=1.24.1.post2",
     "pillow>=11.1.0",
