--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pillow>=11.1.0",
     "rshell>=0.0.36",
     "typer>=0.15.2",
+    "watchdog>=6.0.0",
 ]
 
 [dependency-groups]
