Local updates for name provisioning, etC

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+name_provisioner.py
 name.json
 node_modules
 .nuxt
@@ -18,7 +19,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+``
 # Distribution / packaging
 .Python
 build/
